Component singleization/filter function

--- a/client/src/component/Filterfunc.css
+++ b/client/src/component/Filterfunc.css
@@ -36,6 +36,24 @@
     margin-left: 85px;
 }
 
+.filterOption4 {
+    float: left;
+    margin-top: -535px;
+    margin-left: 85px;
+}
+
+.filterOption5 {
+    float: left;
+    margin-top: -500px;
+    margin-left: 85px;
+}
+
+.filterOption6 {
+    float: left;
+    margin-top: -465px;
+    margin-left: 85px;
+}
+
 p {
     color: #888;
     font-family: 'Pretendard-Regular';
