--- a/client/src/MainBoard.css
+++ b/client/src/MainBoard.css
@@ -1,3 +1,47 @@
+/*TopBar.css*/
+.TopBar {
+    position: absolute;
+    float: left;
+    margin-top: 0px;
+    margin-left: 90px;
+}
+
+.toptoolIcon {
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    padding-bottom: 0;
+    padding-right: 0;
+}
+
+.TopCenterTool {
+    margin-top: -65px;
+    margin-left: 575px;
+}
+
+.ToprightTool {
+    margin-top: -65px;
+    margin-left: 1290px;
+}
+
+.imgSizeControl {
+    margin-left: 15%;
+    margin-top: 5%;
+    max-width:1200px;
+    max-height:550px;
+    width: auto;
+    height: auto;
+}
+
+.canvas {
+    position: absolute;
+    float: left;
+    margin-top: 5%;
+    margin-left: 10%;
+    background-color: #D3D3D3;
+}
+
+/*SideBar.css*/
 .toolIcon {
     padding: 10px;
     width: 50px;
@@ -55,10 +99,6 @@
     width: 50px;
     height: 50px;
     padding-bottom: 0;
-}
-
-
-.sideBar {
 }
 
 .sideArea {
