--- a/client/src/component/Modals/Modal.css
+++ b/client/src/component/Modals/Modal.css
@@ -1,3 +1,20 @@
+@font-face {
+  font-family: 'nanumR';
+  src: url(../fonts/NanumSquareR.ttf);
+}
+@font-face {
+  font-family: 'nanumB';
+  src: url(../fonts/NanumSquareB.ttf);
+}
+@font-face {
+  font-family: 'nanumEB';
+  src: url(../fonts/NanumSquareEB.ttf);
+}
+@font-face {
+  font-family: 'nanumL';
+  src: url(../fonts/NanumSquareL.ttf);
+}
+
 .modal {
     display: none;
     position: fixed;
@@ -7,76 +24,156 @@
     left: 0;
     z-index: 99;
     background-color: rgba(0, 0, 0, 0.6);
+}
+.modal button {
+  outline: none;
+  cursor: pointer;
+  border: 0;
+}
+.modal > section {
+  width: 44%;
+  max-width: 800px;
+  height: 52%;
+  /* max-height: ; */
+  margin: 0 auto;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border: 1.4px solid black;
+  background-color: #fff;
+  /* 팝업이 열릴때 스르륵 열리는 효과 */
+  animation: modal-show 0.3s;
+  overflow: hidden;
+}
+.modal > section > header {
+  position: relative;
+  padding: 36px 64px 16px 16px;
+  background-color: black;
+  font-weight: 700;
+  height: 3%;
+}
+.modal > section > header button { 
+    /* 창닫기 버튼 */
+  position: absolute;
+  top: 4px;
+  right: 32px;
+  width: 30px;
+  font-family: 'nanumEB';
+  font-size: 50px;
+  text-align: center;
+  color: white;
+  background-color: transparent;
+}
+.modal > section > main {
+  padding: 16px;
+  border-bottom: 1px solid #dee2e6;
+  border-top: 1px solid #dee2e6;
+}
+.modal.openModal {
+  display: flex;
+  align-items: center;
+  /* 팝업이 열릴때 스르륵 열리는 효과 */
+  animation: modal-bg-show 0.3s;
+}
+@keyframes modal-show {
+  from {
+    opacity: 0;
+    margin-top: -50px;
   }
-  .modal button {
-    outline: none;
-    cursor: pointer;
-    border: 0;
+  to {
+    opacity: 1;
+    margin-top: 0;
   }
-  .modal > section {
-    width: 90%;
-    max-width: 450px;
-    margin: 0 auto;
-    border-radius: 0.3rem;
-    background-color: #fff;
-    /* 팝업이 열릴때 스르륵 열리는 효과 */
-    animation: modal-show 0.3s;
-    overflow: hidden;
+}
+@keyframes modal-bg-show {
+  from {
+    opacity: 0;
   }
-  .modal > section > header {
-    position: relative;
-    padding: 16px 64px 16px 16px;
-    background-color: #f1f1f1;
-    font-weight: 700;
+  to {
+    opacity: 1;
   }
-  .modal > section > header button {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    width: 30px;
-    font-size: 21px;
-    font-weight: 700;
-    text-align: center;
-    color: #999;
-    background-color: transparent;
-  }
-  .modal > section > main {
-    padding: 16px;
-    border-bottom: 1px solid #dee2e6;
-    border-top: 1px solid #dee2e6;
-  }
-  .modal > section > footer {
-    padding: 12px 16px;
-    text-align: right;
-  }
-  .modal > section > footer button {
-    padding: 6px 12px;
-    color: #fff;
-    background-color: #6c757d;
-    border-radius: 5px;
-    font-size: 13px;
-  }
-  .modal.openModal {
-    display: flex;
-    align-items: center;
-    /* 팝업이 열릴때 스르륵 열리는 효과 */
-    animation: modal-bg-show 0.3s;
-  }
-  @keyframes modal-show {
-    from {
-      opacity: 0;
-      margin-top: -50px;
-    }
-    to {
-      opacity: 1;
-      margin-top: 0;
-    }
-  }
-  @keyframes modal-bg-show {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
+}
+
+.inputBox {
+  text-align: center;
+  height: 110px;
+  margin-top: 10%;
+  margin-bottom: 2%;
+}
+
+input {
+  width: 71%;
+  height: 66%;
+  margin-top: 5%;
+  border-radius: 10px;
+  border-style: none;
+  background-color: #9FC2DE;
+  font-size: 22px;
+  padding-left: 5%;
+}
+input::placeholder {
+  color: white;
+  font-family: 'nanumB';
+  font-size: 32px;
+  /* padding-left: 5%; */
+}
+input:focus {
+  outline: none;
+}
+
+.btnBox {
+  /* background-color: pink; */
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
+.importBtn {
+  height: 18%;
+  width: 36%;
+  background-color: transparent;
+  margin-right: 17px;
+  border-radius: 10px;
+
+  color: #004483; 
+  font-family: 'nanumB';
+  font-size: 24px;
+}
+.close {
+  height: 18%;
+  width: 36%;
+  background-color: transparent;
+  margin-left: 17px;
+  border-radius: 10px;
+
+  color: #004483; 
+  font-family: 'nanumB';
+  font-size: 24px;
+}
+
+h1 {
+  color: #004483; 
+  font-family: 'nanumEB';
+  font-size: 36px;
+  text-align: center;
+  margin-top: 10%;
+}
+
+h2 {
+  text-align: center;
+  font-family: 'nanumL';
+  font-size: 20px;
+  color: #59666F;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  line-height: 180%;
+}
+
+.checkBtn {
+  height: 14%;
+  width: 26%;
+  background-color: #9FC2DE;
+  border-radius: 14px;
+  color: #004483; 
+  font-family: 'nanumB';
+  font-size: 26px;
+}
