--- a/client/src/MainBoard.css
+++ b/client/src/MainBoard.css
@@ -4,6 +4,12 @@
     float: left;
     margin-top: 0px;
     margin-left: 90px;
+
+    border-bottom: thick solid #9FC2DE;
+    border-width: 3.4px;
+
+    height: 71.4px;
+    width: 100vw;
 }
 
 .toptoolIcon {
@@ -12,6 +18,18 @@
     height: 50px;
     padding-bottom: 0;
     padding-right: 0;
+}
+
+.topSaveIcon {
+    /* float: right; */
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    padding-bottom: 0;
+    padding-right: 0;
+
+    margin-top: 1%;
+
 }
 
 .TopCenterTool {
@@ -61,7 +79,8 @@
     padding: 10px;
     width: 50px;
     height: 50px;
-    padding-bottom: 0;}
+    padding-bottom: 0;
+}
 
 .icon_select{fill:#9DAAB2;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     padding: 10px;
@@ -109,22 +128,24 @@
 .shortContour {
     background-color: #9FC2DE;
     border: 0;
-    width: 60px;
+    /* width: 60px; */
+    width: 80%;
     height: 3px;
     border-radius: 30px;
     margin-left: 8px;
+    margin-right: 8px;
 }
 
 .longContour {
     background-color: #9FC2DE;
     border: 0;
-    width: 99%;
+    width: 2000%;
     height: 3px;
     border-radius: 30px;
     text-align: left;
 }
 
-.verticalLine {
+/* .verticalLine {
     border-left: thick solid #9FC2DE;
     border-width: 4px;
     border-radius: 3px;
@@ -135,4 +156,18 @@
     margin-left: -685px;
     margin-top: 5px;
 	padding: 5px;
+} */
+
+.sideBar {
+    /* border: 3px solid red; */
+    height: 100vh;
+    width: 100vw;
+}
+
+.tmp {
+    border-right: thick solid #9FC2DE;
+    border-width: 4px;
+    border-radius: 3px;
+    height: 100vh;
+    width: 4vw;
 }
