--- a/client/src/MainBoard.css
+++ b/client/src/MainBoard.css
@@ -20,6 +20,11 @@
     padding-right: 0;
 }
 
+.TopCenterTool {
+    margin-top: -65px;
+    margin-left: 575px;
+}
+
 .topSaveIcon {
     /* float: right; */
     padding: 10px;
@@ -27,17 +32,19 @@
     height: 50px;
     padding-bottom: 0;
     padding-right: 0;
-
     margin-top: 1%;
-
+    /* display: inline-block; */
 }
 
-.TopCenterTool {
-    margin-top: -65px;
-    margin-left: 575px;
+.rightDiv {
+    display: inline-block;
+    /* float: right; */
+    /* margin-right: 10px; */
+
 }
 
 .ToprightTool {
+    /* background-color: blue; */
     margin-top: -65px;
     margin-left: 1290px;
 }
@@ -54,7 +61,7 @@
 .canvas {
     position: absolute;
     float: left;
-    margin-top: 5%;
+    margin-top: 15%;
     margin-left: 10%;
     background-color: #D3D3D3;
 }
