--- a/client/src/component/Shapefunc.css
+++ b/client/src/component/Shapefunc.css
@@ -57,3 +57,11 @@
 .shapeOption4 {
     margin-bottom: 30px;
 }
+
+.shapeIcon {
+    fill:#59666F;stroke:#9DAAB2;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
+    padding: 10px;
+    width: 50px;
+    height: 50px;
+    padding-bottom: 0;
+}
