--- a/client/src/component/Textfunc.css
+++ b/client/src/component/Textfunc.css
@@ -5,71 +5,50 @@
     font-style: normal;
 }
 
-.textBar {
-    display: inline-block;
-    position: absolute;
-    top: 400px;
-    margin-left: 130px;
-}
+p {
+    color: #888;
+    font-family: 'Pretendard-Regular';
+    font-size: 14px;
+} 
 
-.optionverticalLine {
-    border-left: thick solid #9FC2DE;
-    border-width: 4px;
-    border-radius: 3px;
-    height:90%;
-    left: 50%;
-    position: absolute;
-    float: left;
-    /* margin-left: -615px;
-    margin-top: -660px; */
-	padding: 5px;
+.colorBox, .textDiv {
+    height: 30px;
+    margin-top: 20px;
 }
 
 .textOption1 {
-    /* float: left; */
     display: inline-block;
     margin-bottom: 30px;
+    margin-top: 20px;
+    height: 60px;
+    background-color:transparent;
+    border: none;
 }
 
-.colorBox {
-    display: inline-block;
+.textOption2, .textOption3, .textOption4, .textOption5, .textOption6 {
+    background-color:transparent;
+    margin-top: 0px;
+    height: 46px;
+    border: none;
+}
+
+.textOption7 {
+    margin-top: -10px;
+    background-color: transparent;
+    height: 46px;
+    border: none;
 }
 
 .rect {
     width: 22px;
     height: 22px;
-    float: right;
     border-radius: 4px;
-    margin-right: 28px;    
+    margin-left: 14px;
+    margin-bottom: -10px;
 }
 
 .colorPicker {
     position: absolute;
     /* float: left; */
     display: inline-block;
-}
-
-.textOption2 {
-    /* float: left; */
-    margin-bottom: 30px;
-}
-
-.textOption3 {
-    /* float: left; */
-    margin-bottom: 30px;
-}
-
-.textOption4 {
-    /* float: left; */
-    margin-bottom: 30px;
-}
-
-.textOption5 {
-    /* float: left; */
-    margin-bottom: 30px;
-}
-
-.textOption6 {
-    /* float: left; */
-    margin-bottom: 30px;
 }
