--- a/client/src/component/Turnfunc.css
+++ b/client/src/component/Turnfunc.css
@@ -5,80 +5,26 @@
     font-style: normal;
 }
 
-.optionverticalLine {
-    border-left: thick solid #9FC2DE;
-    border-width: 4px;
-    border-radius: 3px;
-    height:90%;
-    left: 50%;
-    position: absolute;
-    float: left;
-    margin-left: -615px;
-    margin-top: -660px;
-	padding: 5px;
+.turnDiv1, .turnDiv2 {
+    height: 0px;
 }
 
 .turnOption1 {
     float: left;
-    margin-top: -650px;
-    margin-left: 80px;
+    margin-top: 20px;
 }
 
 .turnOption2 {
     float: left;
-    margin-top: -570px;
-    margin-left: 77px;
     transform: scaleX(-1);
 }
 
-.turnOption1Text {
-    float: left;
-    font-size: 15px;
-    margin-top: -590px;
-    margin-left: 97px;
-}
-
-.turnOption2Text {
-    float: left;
-    font-size: 15px;
-    margin-top: -510px;
-    margin-left: 91px;
-}
-
-.filterOption2 {
-    float: left;
-    margin-top: -605px;
-    margin-left: 85px;
-}
-
-.filterOption3 {
-    float: left;
-    margin-top: -570px;
-    margin-left: 85px;
-}
-
-.filterOption4 {
-    float: left;
-    margin-top: -535px;
-    margin-left: 85px;
-}
-
-.filterOption5 {
-    float: left;
-    margin-top: -500px;
-    margin-left: 85px;
-}
-
-.filterOption6 {
-    float: left;
-    margin-top: -465px;
-    margin-left: 85px;
-}
-
-p {
+.turnOption1Text, .turnOption2Text {
     color: #888;
     font-family: 'Pretendard-Regular';
-    font-size: 20px;
+    float: left;
+    font-size: 15px;
+    height: 0px;
 }
 
 .iconStyle {
