--- a/client/src/MainBoard.css
+++ b/client/src/MainBoard.css
@@ -39,6 +39,7 @@
     margin-top: 5%;
     margin-left: 10%;
     background-color: #D3D3D3;
+    /*background-color: #00000000; //배경 투명하게*/
 }
 
 /*SideBar.css*/
