--- a/client/src/MainBoard.css
+++ b/client/src/MainBoard.css
@@ -93,6 +93,22 @@
     /*background-color: #00000000; //배경 투명하게*/
 }
 
+.turn_select {
+    fill:#9DAAB2;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
+    width: 45px;
+    height: 45px;
+    margin-top: 7px;
+    margin-left: 9px;
+}
+
+.turn_noneselect {
+    fill:#9DAAB2;stroke:#9DAAB2;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
+    width: 45px;
+    height: 45px;
+    margin-top: 7px;
+    margin-left: 9px;
+}
+
 .iconStyle {
     fill:#9DAAB2;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     padding: 10px;
@@ -105,32 +121,32 @@
     fill:#9DAAB2;stroke:#9DAAB2;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     width: 40px;
     height: 40px;
-    margin-top: 64px;
-    margin-left: 6px;
+    margin-top: 67px;
+    margin-left: 8px;
 }
 
 .icon_select1{
     fill:#9DAAB2;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     width: 40px;
     height: 40px;
-    margin-top: 64px;
-    margin-left: 6px;
+    margin-top: 67px;
+    margin-left: 8px;
 }
 
 .icon_noneselect{
     fill:#9DAAB2;stroke:#9DAAB2;stroke-width:3;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     width: 40px;
     height: 40px;
-    margin-top: 4px;
-    margin-left: 6px;
+    margin-top: 7px;
+    margin-left: 10px;
 }
 
 .icon_select{
     fill:#9DAAB2;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     width: 40px;
     height: 40px;
-    margin-top: 4px;
-    margin-left: 6px;
+    margin-top: 7px;
+    margin-left: 10px;
 }
 
 .shape_noneselect{
@@ -139,49 +155,38 @@
     stroke-linecap:round;
     stroke-linejoin:round;
     stroke-miterlimit:10;
-    width: 40px;
-    height: 40px;
-    margin-top: 4px;
-    margin-left: 6px;
+    width: 35px;
+    height: 35px;
+    margin-top: 12px;
+    margin-left: 13px;
 }
 
 .shape_select{
     fill:#004483;
     stroke:#9DAAB2;
-    width: 40px;
-    height: 40px;
-    margin-top: 4px;
-    margin-left: 6px;
-}
-
-.st6{
-    fill:#4C5F68;
-    width: 40px;
-    height: 40px;
-    margin-top: 4px;
-    margin-left: 6px;
-}
-
-.st7{
-    fill:#004483;
-    width: 40px;
-    height: 40px;
-    margin-top: 4px;
-    margin-left: 6px;
+    width: 35px;
+    height: 35px;
+    margin-top: 12px;
+    margin-left: 13px;
 }
 
 .eraser_noneselect{
     fill:#9DAAB2;stroke:#9DAAB2;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     margin-top: 4px;
-    margin-left: 6px;
+    margin-left: 8px;
 }
 
 .eraser_select, .side4-3 {
     fill:#004483;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     margin-top: 4px;
-    margin-left: 6px;
+    margin-left: 8px;
+}
+
+#inputList {
+    width: 0px;
+    height: 0px;
 }
