--- a/client/src/component/Shapefunc.css
+++ b/client/src/component/Shapefunc.css
@@ -21,11 +21,20 @@
     height: 10px;
 }
 
-.shapeIcon1, .shapeIcon2, .shapeIcon3 {
+.shapeIcon2, .shapeIcon3 {
     fill:#59666F;stroke:#9DAAB2;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
     width: 50px;
     height: 50px;
     float: left;
-    margin-top: 20px;
-    margin-left: 2px;
+    margin-top: 10px;
+    margin-left: 6px;
+}
+
+.shapeIcon1 {
+    fill:#59666F;stroke:#9DAAB2;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
+    width: 50px;
+    height: 50px;
+    float: left;
+    margin-top: 60px;
+    margin-left: 6px;
 }
