--- a/client/src/MainBoard.css
+++ b/client/src/MainBoard.css
@@ -33,6 +33,8 @@
     margin-right: 6px;
     margin-top: 4px;
     float: left;
+
+    cursor:pointer;
 }
 
 .CenterTop {
@@ -44,6 +46,7 @@
 }
 .centertop1, .centertop2, .centertop3 {
     width: 60px;
+    cursor:pointer;
 }
 
 .RightTop {    
@@ -59,6 +62,8 @@
     float: right;
     margin-top: 6px;
     margin-right: 6px;
+
+    cursor:pointer;
 }
 
 .SideBar {
@@ -99,6 +104,8 @@
     height: 45px;
     margin-top: 7px;
     margin-left: 9px;
+
+    cursor:pointer;
 }
 
 .turn_noneselect {
@@ -107,6 +114,8 @@
     height: 45px;
     margin-top: 7px;
     margin-left: 9px;
+
+    cursor:pointer;
 }
 
 .iconStyle {
@@ -115,6 +124,8 @@
     width: 40px;
     height: 40px;
     padding-bottom: 0;
+
+    cursor:pointer;
 }
 
 .icon_noneselect1{
@@ -123,6 +134,8 @@
     height: 40px;
     margin-top: 67px;
     margin-left: 8px;
+
+    cursor:pointer;
 }
 
 .icon_select1{
@@ -131,6 +144,8 @@
     height: 40px;
     margin-top: 67px;
     margin-left: 8px;
+
+    cursor:pointer;
 }
 
 .icon_noneselect{
@@ -139,6 +154,8 @@
     height: 40px;
     margin-top: 7px;
     margin-left: 10px;
+
+    cursor:pointer;
 }
 
 .icon_select{
@@ -147,6 +164,8 @@
     height: 40px;
     margin-top: 7px;
     margin-left: 10px;
+
+    cursor:pointer;
 }
 
 .shape_noneselect{
@@ -159,6 +178,8 @@
     height: 35px;
     margin-top: 12px;
     margin-left: 13px;
+
+    cursor:pointer;
 }
 
 .shape_select{
@@ -168,6 +189,8 @@
     height: 35px;
     margin-top: 12px;
     margin-left: 13px;
+
+    cursor:pointer;
 }
 
 .eraser_noneselect{
@@ -176,6 +199,8 @@
     height: 45px;
     margin-top: 4px;
     margin-left: 8px;
+
+    cursor:pointer;
 }
 
 .eraser_select, .side4-3 {
@@ -184,6 +209,8 @@
     height: 45px;
     margin-top: 4px;
     margin-left: 8px;
+
+    cursor:pointer;
 }
 
 #inputList {
