--- a/client/src/component/Paintfunc.css
+++ b/client/src/component/Paintfunc.css
@@ -10,6 +10,7 @@
 
 .paintOption1-1, .paintOption2-1, .paintOption3-1, .paintOption4-1, .paintOption5-1, .paintOption6-1 {
     height: 10px;
+    cursor:pointer;
 }
 
 .paintOption1 {
@@ -17,8 +18,10 @@
     margin-top: -300px;
     margin-left: 93px; */
     float: left;
-    margin-top: 90px;
+    position: absolute;
+    top: 100px;
     font-size: 16px;
+    height: 10px;
 }
 
 .paintOption2 {
@@ -26,6 +29,9 @@
     font-size: 16px;
     /* margin-top: -265px;
     margin-left: 93px; */
+    position: absolute;
+    top: 150px;
+    height: 10px;
 }
 
 .paintOption3 {
@@ -35,12 +41,15 @@
     font-size: 16px;
     /* margin-top: -230px;
     margin-left: 93px; */
+    position: absolute;
+    top: 200px;
+    height: 10px;
 }
 
 .colorpicker {
     float: left;
-    margin-top: 25px;
-    margin-left: 80px;
+    top: 45px;
+    left: 70px;
     width: 200px;
     height: 90px;
 }
