--- a/client/src/component/Shapefunc.css
+++ b/client/src/component/Shapefunc.css
@@ -28,6 +28,8 @@
     float: left;
     margin-top: 10px;
     margin-left: 6px;
+
+    cursor:pointer;
 }
 
 .shapeIcon1 {
@@ -37,4 +39,6 @@
     float: left;
     margin-top: 60px;
     margin-left: 6px;
+
+    cursor:pointer;
 }
