--- a/client/src/component/Paintfunc.css
+++ b/client/src/component/Paintfunc.css
@@ -8,30 +8,55 @@
     text-align: center;
 }
 
+.paintIconStyle1 {
+    fill:#9DAAB2;stroke:#004483;stroke-width:7;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
+    padding: 10px;
+    width: 45px;
+    height: 45px;
+    padding-bottom: 0;
+    margin-bottom: -8px;
+}
+
+.paintIconStyle2 {
+    fill:white;stroke:#004483;stroke-width:5;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;
+    padding: 10px;
+    width: 45px;
+    height: 45px;
+    padding-bottom: 0;
+    margin-bottom: -8px;
+}
+
+.paintDiv1 {
+    height: 0px;
+    top: 30px;
+    position: absolute;
+
+    cursor:pointer;
+}
+
+.paintDiv2 {
+    height: 0px;
+    top: 112px;
+    position: absolute;
+
+    cursor:pointer;
+}
+
 .paintOption1-1, .paintOption2-1, .paintOption3-1, .paintOption4-1, .paintOption5-1, .paintOption6-1 {
     height: 10px;
     cursor:pointer;
 }
 
 .paintOption1 {
-    /* float: left;
-    margin-top: -300px;
-    margin-left: 93px; */
     float: left;
-    position: absolute;
-    top: 100px;
     font-size: 16px;
-    height: 10px;
+    margin-left: -2px;
 }
 
 .paintOption2 {
     float: left;
     font-size: 16px;
-    /* margin-top: -265px;
-    margin-left: 93px; */
-    position: absolute;
-    top: 150px;
-    height: 10px;
+    margin-left: -2px;
 }
 
 .paintOption3 {
@@ -44,6 +69,16 @@
     position: absolute;
     top: 200px;
     height: 10px;
+}
+
+.paintOption1Text, .paintOption2Text {
+    color: #888;
+    font-family: 'Pretendard-Regular';
+    float: left;
+    font-size: 15px;
+    height: 0px;
+
+    cursor:pointer;
 }
 
 .colorpicker {
