--- a/client/src/component/MenualPopup.css
+++ b/client/src/component/MenualPopup.css
@@ -6,8 +6,8 @@
 }
 
 .popupImage {
-    width: 1000px;
-    height: 2250px;
+    width: 800px; /*1000px;*/
+    height: 1800px; /*2250px;*/
 }
 
 .menualPopup {
@@ -17,14 +17,14 @@
     position: absolute;
     z-index: 2;
     top: 20px;
-    left: 18%;
+    left: 25%;
     width: 900px;
     
 }
 
 .menualCloseBtn {
     position: absolute;
-    margin-left: 52%;
+    margin-left: 40%;
     margin-top: 20px;
     margin-bottom: 50px;
     width: 45px;
@@ -42,7 +42,7 @@
 
 .menualCloseBtn:hover {
     position: absolute;
-    margin-left: 52%;
+    margin-left: 40%;
     margin-top: 20px;
     margin-bottom: 50px;
     width: 45px;
@@ -61,7 +61,7 @@
 
 .blackBox {
     width: 100%;
-    height: 2350px;
+    height: 1900px;
     background-color:rgba(0, 0, 0, 0.5);
     position: absolute;
     left: 0;
